# mcp-lab

./: .gitignore  .pre-commit-config.yaml  README.md  claude_feedback.md  fork_notes.md  ideas.md  notes.md  prs.md  pyproject.toml  spec_analysis.md
.cursor/rules/: spec.mdc
microservers/oura/: server.py
servers/oura/: api_scratch.py  goals.md  server.py  test_client.py
